@@ -1,0 +1,15 @@
+package base
+
+opts = "--noprelude"
+modules = builtins, prelude, io, system,
+
+          prelude.algebra, prelude.cast, prelude.nat, prelude.fin,
+          prelude.list, prelude.maybe, prelude.monad, prelude.applicative,
+          prelude.either, prelude.vect, prelude.strings, prelude.char,
+          prelude.heap, prelude.complex,
+
+          network.cgi,
+
+          language.reflection,
+
+          control.monad.identity, control.monad.state
