@@ -25,13 +25,15 @@ import Idris.Primitives
 import Idris.Imports
 import Idris.Error
 
+import Pkg.Package
+
 import Paths_idris
 
 -- Main program reads command line options, parses the main program, and gets
 -- on with the REPL.
 
 main = do xs <- getArgs
-          opts <- parseArgs xs
+          let opts = parseArgs xs
           runInputT defaultSettings $ execStateT (runIdris opts) idrisInit
 
 runIdris :: [Opt] -> Idris ()
@@ -41,7 +43,13 @@ runIdris opts = do
        when (ShowIncs `elem` opts) $ liftIO showIncs
        when (ShowLibs `elem` opts) $ liftIO showLibs
        when (ShowLibdir `elem` opts) $ liftIO showLibdir
-       idrisMain opts -- in Idris.REPL
+       case opt getPkgClean opts of
+           [] -> return ()
+           fs -> do liftIO $ mapM_ cleanPkg fs
+                    liftIO $ exitWith ExitSuccess
+       case opt getPkg opts of
+           [] -> idrisMain opts -- in Idris.REPL
+           fs -> liftIO $ mapM_ (buildPkg (WarnOnly `elem` opts)) fs
 
 usage = do putStrLn usagemsg
            exitWith ExitSuccess
@@ -60,29 +68,6 @@ showLibdir = do dir <- getDataDir
 showIncs = do dir <- getDataDir
               putStrLn $ "-I" ++ dir ++ "/rts"
               exitWith ExitSuccess
-
-parseArgs :: [String] -> IO [Opt]
-parseArgs [] = return []
-parseArgs ("--log":lvl:ns)      = liftM (OLogging (read lvl) : ) (parseArgs ns)
-parseArgs ("--noprelude":ns)    = liftM (NoPrelude : ) (parseArgs ns)
-parseArgs ("--check":ns)        = liftM (NoREPL : ) (parseArgs ns)
-parseArgs ("-o":n:ns)           = liftM (\x -> NoREPL : Output n : x) (parseArgs ns)
-parseArgs ("-no":n:ns)          = liftM (\x -> NoREPL : NewOutput n : x) (parseArgs ns)
-parseArgs ("--typecase":ns)     = liftM (TypeCase : ) (parseArgs ns)
-parseArgs ("--typeintype":ns)   = liftM (TypeInType : ) (parseArgs ns)
-parseArgs ("--nocoverage":ns)   = liftM (NoCoverage : ) (parseArgs ns)
-parseArgs ("--errorcontext":ns) = liftM (ErrContext : ) (parseArgs ns)
-parseArgs ("--help":ns)         = liftM (Usage : ) (parseArgs ns)
-parseArgs ("--link":ns)         = liftM (ShowLibs : ) (parseArgs ns)
-parseArgs ("--libdir":ns)       = liftM (ShowLibdir : ) (parseArgs ns)
-parseArgs ("--include":ns)      = liftM (ShowIncs : ) (parseArgs ns)
-parseArgs ("--version":ns)      = liftM (Ver : ) (parseArgs ns)
-parseArgs ("--verbose":ns)      = liftM (Verbose : ) (parseArgs ns)
-parseArgs ("--ibcsubdir":n:ns)  = liftM (IBCSubDir n : ) (parseArgs ns)
-parseArgs ("-i":n:ns)           = liftM (ImportDir n : ) (parseArgs ns)
-parseArgs ("--bytecode":n:ns)   = liftM (\x -> NoREPL : BCAsm n : x) (parseArgs ns)
-parseArgs ("--fovm":n:ns)       = liftM (\x -> NoREPL : FOVM n : x) (parseArgs ns)
-parseArgs (n:ns)                = liftM (Filename n : ) (parseArgs ns)
 
 usagemsg = "Idris version " ++ ver ++ "\n" ++
            "--------------" ++ map (\x -> '-') ver ++ "\n" ++
